--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PRE ENTREGA 1 - SIMULADOR INTERACTIVO</title>
+    <title>PRE ENTREGA 1 - SIMULADOR INTERACTIVO</title>}
+    <h1>CALCULADOR DE PESOS DE LATAS</h1>
 </head>
 <body>
 <script src="./main.js"></script>
