--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PRE ENTREGA 1 - SIMULADOR INTERACTIVO</title>}
+    <title>PRE ENTREGA 1 - SIMULADOR INTERACTIVO</title>
     <h1>CALCULADOR DE PESOS DE LATAS DE PINTURA!</h1>
+
 </head>
 <body>
 <script src="./main.js"></script>
